# NeeN-N-Agent

./: .gitignore  install.ps1  install.sh
.github/workflows/: build.yml
src/: chat.html  index.html  login.html  notification.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_engine.rs  config.rs  lib.rs  main.rs  neen_api.rs  notification_monitor.rs  screen_capture.rs  system_control.rs  voice_processor.rs
