[package]
name = "neen-desktop-agent"
version = "0.1.0"
description = "NeeN AI Desktop Agent - Autonomous AI Assistant"
authors = ["NeeN AI Team"]
license = "MIT"
repository = "https://github.com/neen-ai/desktop-agent"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "neen_desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# HTTP Client for NeeN AI APIs
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }

# Screen Capture & Control
screenshots = "0.3"
rdev = "0.4"
image = "0.25"

# Voice Processing
rodio = "0.19"
hound = "3.5"

# System Integration
sysinfo = "0.30"
dirs = "5.0"
notify = "6.1"

# Logging & Error Handling
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

# Async & Utilities
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
toml = "0.8"

# Security
keyring = "2.3"

# Regex for text processing
regex = "1.10"

# WebSocket
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
